// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorMessage component inline warning 1`] = `
<div
  className="ui message negative"
  style={
    Object {
      "display": "inline-block",
    }
  }
>
  <p>
    warning
  </p>
</div>
`;

exports[`ErrorMessage component is warning 1`] = `
<div
  className="ui message negative"
  style={Object {}}
>
  <p>
    warning
  </p>
</div>
`;

exports[`ErrorMessage component multiple errors 1`] = `
<div
  className="ui message negative"
  style={Object {}}
>
  <ul>
    <li>
      error1
    </li>
    <li>
      error2
    </li>
  </ul>
</div>
`;

exports[`ErrorMessage component simple message 1`] = `
<div
  className="ui message negative"
  style={Object {}}
>
  <p>
    error
  </p>
</div>
`;
